# circuitos

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
examples/: bell_state.py  deutsch_jozsa.py  grover_2qubits.py  qft_demo.py
notebooks/: 00_fundamentos.ipynb  01_entrelazamiento_bell.ipynb  02_oraculos_deutsch_grover.ipynb  03_qft_teleportacion.ipynb
scripts/: execute_notebooks.py
src/quantum_circuits/: __init__.py  algorithms.py  circuit.py  gates.py  visualization.py
tests/: test_circuits.py
